# Livrable1

./: README.md  Simulation.ttt  launch.cpp  setup  simulation
V-Rep/models/montrac/: shuttleA.ttm  shuttleB.ttm  shuttleC.ttm  shuttleD.ttm  shuttleE.ttm  shuttleF.ttm  shuttleZbis.ttm  v_repModelThumbnails.ttmt
V-Rep/robots/non-mobile/: v_repModelThumbnails.ttmt
commande/src/: actionneurs.cpp  main_commande.cpp
commande_locale/: CMakeLists.txt~
commande_locale/msg/: Msg_StopControl.msg~
commande_locale/src/: UI.cpp  UI.cpp~  inOutController.h  inOutController.h~  vrepController.cpp~  vrepController.h
ros_ws/: README.md
ros_ws/aiguillages/: CMakeLists.txt  package.xml
ros_ws/aiguillages/src/: A1.cpp  A1.h  A11.cpp  A11.h  A12.cpp  A12.h  A2.cpp  A2.h  aiguillage_1.cpp  aiguillage_11.cpp  aiguillage_12.cpp  aiguillage_2.cpp
ros_ws/commande/: CMakeLists.txt  CMakeLists.txt~  package.xml
ros_ws/commande/src/: actionneurs.cpp~  actionneurs.h~  capteurs.cpp  capteurs.cpp~  main_commande.cpp  main_commande.cpp~  robots.cpp  robots.h
ros_ws/commande_locale/msg/: Msg_PinControl.msg  Msg_PinControl.msg~
ros_ws/commande_locale/src/: UI.h  UI.h~  commande_locale.cpp  commande_locale.cpp~  inOutController.cpp  inOutController.cpp~  inOutController.h  vrepController.cpp  vrepController.h  vrepController.h~
ros_ws/postes/: CMakeLists.txt  package.xml
ros_ws/postes/msg/: Shuttle.msg
ros_ws/postes/src/: A11.cpp  A11.h  Poste.cpp  Poste.h  aiguillage_11.cpp  main_poste.cpp
ros_ws/robot/: CMakeLists.txt  package.xml
ros_ws/robot/src/: robot1.cpp  (+11 more)
ros_ws/shuttles/: CMakeLists.txt
ros_ws/shuttles/src/: shuttleManager.cpp  shuttleManager.h
(+1 files in other folders)
